--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -7,7 +7,7 @@
     <p><%= "#{@location.sockets} sockets available" %>
   </div>
   <div class="panel-footer">
-    <p><%= "Last updated by #{@last_updated_user.email}" %></p>
+    <p><%= "Last updated by #{@last_updated_user.email} at #{@location.updated_at}" %></p>
   </div>
 </div>
 <h1><%= current_user.email %></h1>
