--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,10 @@
  *= require rails_bootstrap_forms
  *= require_self
  */
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+.alert {
+  margin-top: -20px;
+}
