--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,11 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.alert {
-  margin-top: -20px;
+.navbar {
+  margin-bottom: 0;
+  border-radius: 0;
+}
+
+.container {
+  margin-top: 20px;
 }
