--- a/app/views/locations/secret.html.erb
+++ b/app/views/locations/secret.html.erb
@@ -1,3 +1,3 @@
 <p>This is secret!</p>
 
-<%= link_to "Send Twilio SMS", locations_twilio_test_path, class: 'btn btn-default' %>
+<%= link_to "Test Location", locations_get_distance_path, class: 'btn btn-default' %>
