--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,5 +1,6 @@
 <%= bootstrap_form_for(@location) do |f| %>
-  <%= f.text_field :seats %>
-  <%= f.text_field :sockets %>
+  <%= f.text_field :available_seats %>
+  <%= f.text_field :available_sockets %>
+  <%= f.text_field :wifi_password %>
   <%= f.submit "Update" %>
 <% end %>
