--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -7,20 +7,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "WW", root_path, class: 'navbar-brand' %>
+      <%= link_to "WhereWork", root_path, class: 'navbar-brand' %>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
       <% if current_user %>
-        <ul class="nav navbar-nav">
           <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
           <li><%= link_to "Logout", destroy_user_session_path, method:"delete" %></li>
-        </ul>
       <% else %>
-        <ul class="nav navbar-nav">
           <li><%= link_to "Signup", new_user_registration_path %></li>
           <li><%= link_to "Login", new_user_session_path %></li>
-        </ul>
       <% end %>
+        </ul>
     </div>
   </div>
 </div>
