Succeed in displaying nearby locations

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -7,24 +7,24 @@
 //   ['PS Cafe', 1.3068542, 103.8296941],
 //   ['Killiney Kopitiam', 1.304565, 103.833758]
 // ];
-function placeMarker (location) {
-  var latLng = new google.maps.LatLng(location['lat'], location['lng']);
-  var marker = new google.maps.Marker({
-    position: latLng,
-    map: map
-  });
-  google.maps.event.addListener(marker, 'click', function(){
-    infoWindow.close();
-    infoWindow.setContent("<div id= 'infoWindow'>" + location['name'] + "</div>")
-    infoWindow.open(map, marker);
-  });
-}
 function initMap() {
     var infoWindow = new google.maps.InfoWindow();
     var map = new google.maps.Map(document.getElementById('map'), {
       zoom: 16,
       center: {lat: 1.3072052, lng: 103.831843},
     });
+    function placeMarker (location) {
+      var latLng = new google.maps.LatLng(location['lat'], location['lng']);
+      var marker = new google.maps.Marker({
+        position: latLng,
+        map: map
+      });
+      google.maps.event.addListener(marker, 'click', function(){
+        infoWindow.close();
+        infoWindow.setContent("<div id= 'infoWindow'>" + location['name'] + "</div>")
+        infoWindow.open(map, marker);
+      });
+    };
     var userLocationInfoWindow = new google.maps.InfoWindow({map: map});
     // Try HTML5 geolocation.
     if (navigator.geolocation) {
@@ -39,7 +39,7 @@ function initMap() {
         $.ajax({
           type: 'GET',
           url: '/locations/return_nearby_locations',
-          data: JSON.stringify(pos),
+          data: pos,
           contentType: 'application/json',
           dataType: 'json'
         }).done(function(response){
