--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,3 +37,15 @@
   border-radius: 0;
 }
 
+.location-card {
+  // padding: 5px 0;
+  border-radius: 0;
+  .location-card-img {
+    padding: 0;
+  }
+  img {
+    width: 100%;
+    min-height: 150px;
+  }
+}
+
