--- a/app/views/locations/list.html.erb
+++ b/app/views/locations/list.html.erb
@@ -1,4 +1,4 @@
-<h1>this is the list page</h1>
+<p class="lead">These are the locations near you.</p>
 <hr>
 <% @locations.each do |location| %>
 <div class="well location-card row">
