--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,12 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.text_field :first_name, autofocus: true %>
+    <%= f.text_field :last_name %>
+  </div>
+
+  <div class="field">
+    <%= f.email_field :email %>
   </div>
 
   <div class="field">
