--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -11,7 +11,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <% if current_user %>
-            <p class="navbar-text"><%= "Signed in as #{current_user.email}" %></p>
+            <p class="navbar-text"><%= "Signed in as #{current_user.first_name} #{current_user.last_name}" %></p>
         <% end %>
         <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
