--- a/app/views/locations/list.html.erb
+++ b/app/views/locations/list.html.erb
@@ -1,11 +1,14 @@
 <p class="lead">These are the locations near you.</p>
 <%= link_to("Map view", locations_path, class: 'btn btn-primary') %>
 <hr>
+<p>filters:</p>
+
+
 <% @locations.each do |location| %>
-<div class="well location-card row">
+  <div class="well location-card row">
     <div class="col-xs-5 col-md-3 location-card-img">
-      <% if @location.cloudinary_link %>
-        <img src='<%= @location.cloudinary_link %>' alt="" class='img-responsive img-rounded center-block'>
+      <% if location.cloudinary_link %>
+        <img src='<%= location.cloudinary_link %>' alt="" class='img-responsive img-rounded center-block'>
       <% else %>
         <img src="http://placehold.it/300x300" alt="" class='img-responsive img-rounded center-block'>
       <% end %>
@@ -21,5 +24,6 @@
         <p class="label label-warning">Crowded</p>
       <% end %>
     </div>
-</div>
+  </div>
 <% end %>
+
