--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,9 +1,15 @@
 <p class="lead">These are the locations near you.</p>
-<%= link_to("List view", locations_list_path, class: 'btn btn-primary') %>
+<%#= link_to("List view", locations_list_path(:lat => position.coords.latitude, :lng => position.coords.longitude), class: 'btn btn-primary get_list_view') %>
+
+<%#= link_to locations_list_path, method: :get, :lat => position.coords.latitude, :lng => position.coords.longitude, class: 'btn btn-primary', :remote => true %>
+<button id="get_list_view" class="btn btn-primary">Map View</button>
+
 <hr>
 <div id="map"></div><br>
 <script>
 function initMap() {
+  var user_lat;
+  var user_lng;
   var map = new google.maps.Map(document.getElementById('map'), {
     zoom: 16,
     center: {lat: 1.3072052, lng: 103.831843},
@@ -25,6 +31,11 @@ function initMap() {
   // Try HTML5 geolocation.
   if (navigator.geolocation) {
     navigator.geolocation.getCurrentPosition(function(position) {
+      user_lat = position.coords.latitude;
+      user_lng = position.coords.longitude;
+      $('#get_list_view').click(function() {
+      window.location.href = '/locations/list_view/?lat='+user_lat+'lng='+user_lng
+     });
       var pos = {
         lat: position.coords.latitude,
         lng: position.coords.longitude
